tests/invalid/tuple_literal_8max.out
tests/invalid/tuple_literal_8max.ri:3:9: error: tuples can have a maximum of 8 expressions
<<<<<<< HEAD
  3 |     _ = (1, 2, 3, 4, 5, 6, 7, 8, 9); // FAIL
    |         ^
rivetc: error: could not compile module `tuple_literal_8max`, aborting due to previous error
=======
rivetc: error: could not compile package `tuple_literal_8max`, aborting due to previous error
>>>>>>> fd5cbb707991f17d1cc05e277c0ef9c401dd652c
